# vector_db

./: .gitignore  ARCH.md  Dockerfile  PERFORMANCE_COMPARISON.md  PRD.md  PROJECT_STATE.md  README.md  deploy.sh  docker-compose.yml  example.txt  main.py  requirements.txt  todolist.md  vec_db_alg  提示词prompts.txt
api/: main.py
chat_hist/: hist1.md  hist2.md  hist3.md
client/: __init__.py  example.py  vector_db_client.py
config/: .env.example  config.py
core/: data_flow.py  model_manager.py
core/backup/: backup_manager.py
core/cache/: cache_manager.py
core/db_lib/: PROJECT_REVIEW.md  PYTHON_BINDING_OPTIMIZATION.md  README.md  TESTING_README.md  algorithm_optimizations.md  benchmark_report.md  build_all.sh  build_cpp.sh  build_nanobind.sh  build_rust.sh  requirements.txt  test_nanobind.py
core/db_lib/.claude/: settings.json
core/db_lib/cpp/: CMakeLists.txt  Doxyfile
core/db_lib/cpp/algorithms/annoy/: annoy.cpp  annoy.h  bindings.cpp
core/db_lib/cpp/algorithms/balltree/: balltree.cpp  balltree.h  bindings.cpp
core/db_lib/cpp/algorithms/flat/: bindings.cpp  flat.cpp  flat.h
core/db_lib/cpp/algorithms/flat_ip/: bindings.cpp  flat_ip.cpp  flat_ip.h
core/db_lib/cpp/algorithms/hnsw/: bindings.cpp  hnsw.cpp  hnsw.h
core/db_lib/cpp/algorithms/ivf/: bindings.cpp  ivf.cpp  ivf.h
core/db_lib/cpp/algorithms/kdtree/: bindings.cpp  kdtree.cpp  kdtree.h
core/db_lib/cpp/algorithms/lsh/: bindings.cpp  lsh.cpp  lsh.h
core/db_lib/cpp/algorithms/pq/: bindings.cpp  pq.cpp  pq.h
core/db_lib/cpp/core/: vectordb_core.h
core/db_lib/cpp/tests/: test_flat_l2.cpp
core/db_lib/cpp_nanobind/: CMakeLists.txt  bindings_annoy.cpp  bindings_balltree.cpp  bindings_flat.cpp  bindings_flat_ip.cpp  bindings_hnsw.cpp  bindings_ivf.cpp  bindings_kdtree.cpp  bindings_lsh.cpp  bindings_pq.cpp
core/db_lib/python/vectordb/: __init__.py  index.py
core/db_lib/rust/: Cargo.toml
core/db_lib/rust/annoy/: Cargo.toml
core/db_lib/rust/annoy/src/: lib.rs
core/db_lib/rust/balltree/: Cargo.toml
core/db_lib/rust/balltree/src/: lib.rs
core/db_lib/rust/core/: Cargo.toml
core/db_lib/rust/core/src/: lib.rs
core/db_lib/rust/flat/: Cargo.toml
core/db_lib/rust/flat/src/: lib.rs
core/db_lib/rust/flat_ip/: Cargo.toml
core/db_lib/rust/flat_ip/benches/: benchmarks.rs
core/db_lib/rust/flat_ip/src/: lib.rs
core/db_lib/rust/hnsw/: Cargo.toml
core/db_lib/rust/hnsw/src/: lib.rs
core/db_lib/rust/ivf/: Cargo.toml
core/db_lib/rust/ivf/src/: lib.rs
core/db_lib/rust/kdtree/: Cargo.toml
core/db_lib/rust/kdtree/src/: lib.rs
core/db_lib/rust/lsh/: Cargo.toml
core/db_lib/rust/lsh/src/: lib.rs
core/db_lib/rust/pq/: Cargo.toml
core/db_lib/rust/pq/src/: lib.rs
core/db_lib/test/: bench_lsh_vs_faiss.py  bench_real_datasets.py  bench_vs_faiss.py  comprehensive_bench.py  performance_report.py  performance_report_annoy.py  performance_report_balltree.py  performance_report_flat.py  performance_report_flat_ip.py  performance_report_hnsw.py  performance_report_ivf.py  performance_report_kdtree.py  performance_report_lsh.py  performance_report_pq.py  performance_test.py  test_lsh_quick.py  test_lsh_threads.py  test_vector_db.py
core/llm/: llm_interface.py  local_llm.py  remote_llm.py
core/logging/: log_manager.py
core/processors/: audio_processor.py  base_processor.py  image_processor.py  text_processor.py  video_processor.py
core/readers/: audio_reader.py  base_reader.py  image_reader.py  text_reader.py  video_reader.py
core/security/: api_key_storage.py  authentication.py  encryption.py  user_storage.py
core/storage/: database_storage.py  file_storage.py  local_file_storage.py  metadata_storage.py  mongodb_storage.py  mysql_storage.py  object_storage.py  redis_storage.py
core/utils/: parallel_processor.py
core/vector_db/: annoy_vector_db.py  base_vector_db.py  faiss_vector_db.py  hnsw_vector_db.py
data/: model_stats.json  users.db
data/vector_db/: test_collection.faiss  test_collection.pkl
tests/: analyze_performance_results.py  download_datasets.py  generate_performance_report.py  load_test.py  performance_config.py  performance_test.py  performance_test_multiple_databases.py  performance_test_readme.md  performance_test_real_datasets.py  run_performance_tests.py  test_summary.md
tests/loadtest_results/: test_results_failures.csv  test_results_stats.csv  test_results_stats_history.csv
tests/performance_results/: 7VecDB-FAISS_cifar10_5000.json  7VecDB-FAISS_gist1m_5000.json  7VecDB-FAISS_glove_5000.json  7VecDB-FAISS_mnist_5000.json  7VecDB-FAISS_movielens_5000.json  7VecDB-FAISS_random_5000.json  7VecDB-FAISS_sentence_bert_5000.json  7VecDB-FAISS_sift1m_5000.json  ChromaDB_cosine_cifar10_5000_cosine.json  ChromaDB_cosine_gist1m_5000_cosine.json  ChromaDB_cosine_glove_5000_cosine.json  ChromaDB_cosine_mnist_5000_cosine.json  ChromaDB_cosine_movielens_5000_cosine.json  ChromaDB_cosine_random_5000_cosine.json  ChromaDB_cosine_sentence_bert_5000_cosine.json  ChromaDB_cosine_sift1m_5000_cosine.json  ChromaDB_l2_cifar10_5000_l2.json  ChromaDB_l2_gist1m_5000_l2.json  ChromaDB_l2_glove_5000_l2.json  ChromaDB_l2_mnist_5000_l2.json  ChromaDB_l2_movielens_5000_l2.json  ChromaDB_l2_random_5000_l2.json  ChromaDB_l2_sentence_bert_5000_l2.json  ChromaDB_l2_sift1m_5000_l2.json  performance_analysis.md
tests/unit_tests/: test_api.py  test_config.py  test_data_flow.py  test_file_readers.py  test_llm.py  test_metadata_storage.py  test_model_manager.py  test_processors.py  test_readers.py  test_storage.py  test_vector_db.py  test_vector_db_implementations.py  test_video_processor.py
